# MolDocker

./: .gitignore  LICENSE  MANIFEST.in  README.md  moldocker_main.py  pyproject.toml  requirements.txt
moldocker/: moldocker_gui.py  splash_screen.py
moldocker/docking_exec/qvina2_file/: qvina2_mac_arm  qvina2_mac_i386
moldocker/docking_exec/qvinaw_file/: qvinaw_mac_arm  qvinaw_mac_i386
moldocker/plot_empty/: _tmp_fragment.html  empty_dark.html  empty_light.html
moldocker/utilities/: MacFrag.py  adblock_parser.py  browser_utilis.py  chemprop_filters.py  convert_utilis.py  docking_utilis.py  documentation_utilis.py  fingerprint_utilis.py  general_utilis.py  ligplot_utilis.py  lowner_john_ellipse.py  meeko_functions.py  protein_utilis.py  rdeditor_utilis.py  refine_utilis.py  sdf_id_names.txt  utilis.py
moldocker/utilities/adblock_rules/: rules.txt
moldocker/utilities/database/: url_template.txt
moldocker/utilities/fp_param/: fp_param.json
moldocker/utilities/fpocketweb/: app.462ac7f312b72d30037b.js  app.5572f9620978f6f01239.js  app.5af7e71d6bb436cd286b.js  app.5df68852200952a2e951.js  app.667424bf9dc48eaf9340.js  app.6b6466b8672d016fe7e7.js  app.6fbaea46e2e0a2317719.js  app.77524731a4f9ed9d80fb.js  app.9240514ff2d380a5c606.js  app.a01fb38aef45d226f027.js  app.bae46eadebbc47c4738c.js  app.ff5df03b4766c844732f.js  app~00cb062a.70f5557ebaaa240096d3.js  app~1f0c4720.115c2bbd0c16ab20069a.js  app~1f0c4720.15dabec2a04ec57bc7bf.js  app~1f0c4720.98dc524e5f9a062adb64.js  app~2892facf.115c2bbd0c16ab20069a.js  app~2892facf.15dabec2a04ec57bc7bf.js  app~2892facf.193f878d2b84694710f5.js  app~2892facf.554ab4f3fa49302d0b46.js  app~2892facf.588f2210dcb1395b2eb4.js  app~2892facf.6e70674683868d1878bc.js  app~2892facf.70f5557ebaaa240096d3.js  app~2892facf.7b25e55ec60920319e78.js  app~2892facf.90a1f7a911e07ac19c73.js  app~2892facf.98dc524e5f9a062adb64.js  app~2892facf.9c07997ba7b885f6c150.js  app~2892facf.a8bcf7914e02d59a077b.js  app~2892facf.abc5af878caef1e4817e.js  app~2892facf.ca7cfbdb529a4256f6bd.js  app~43f2fd74.15dabec2a04ec57bc7bf.js  app~43f2fd74.193f878d2b84694710f5.js  app~43f2fd74.588f2210dcb1395b2eb4.js  app~43f2fd74.7b25e55ec60920319e78.js  app~53e1ba47.15dabec2a04ec57bc7bf.js  app~53e1ba47.7b25e55ec60920319e78.js  app~ca58a3a9.70f5557ebaaa240096d3.js  app~cef84b79.15dabec2a04ec57bc7bf.js  app~cef84b79.193f878d2b84694710f5.js  app~cef84b79.554ab4f3fa49302d0b46.js  (+64 more)
moldocker/utilities/fpocketweb/FpocketWeb/: FpocketWeb.min.js  fpocket.min.js
moldocker/utilities/ngl_web/: batch_interaction.html  webapp_embed.html  webapp_position.html
moldocker/utilities/ngl_web/js/: gui.js  gui_display.js  ngl.js
moldocker/utilities/ngl_web/scripts/interactive/: hover-tooltip.js
moldocker/utilities/rdeditor/: molEditWidget.py  molViewWidget.py  rdEditor.py
moldocker/utilities/site/: 404.html  general_utilities.html  getting_started.html  index.html  installation.html  molecule_preparation.html  protein_preparation_and_docking.html  result_analysis.html
moldocker/utilities/site/search/: search_index.json
